# Autalon-Transpiler

./: .gitignore  Cargo.toml  NOTES.txt  ex3-FillEmailTemplate.json  testfile.atln  testhtml.html
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: Rust.yml
src/: autalonparser.rs  builtin_package_definition.rs  builtin_pkg_definition.rs  builtin_pkg_list.rs  checker.rs  common_func.rs  config.rs  init.rs  lib.rs  main.rs  tools_pkg_list.rs  transpiler.rs
src/checker/: checker_funcs.rs  compat_check.rs  funcs.rs  pkg_fn_checker.rs  static_var.rs  tree_checker.rs  var_checker.rs  var_state_checker.rs
src/libs/: export.rs  init.rs  mod.rs  wasm_export.rs
src/parser/: expr.pest
src/parser_grammars/: autalon.pest
src/tests/: mod.rs  wasm_test.rs
src/transpiler/: katalon_prealpha.rs  katalon_prealpha_pkg_def.rs  package_func_map.rs
src/transpiler/katalon_prealpha/: consts.rs  pkgdef.rs
