[package]
name = "autalon-transpiler"
version = "0.1.4"
authors = ["Robin Mauritz <robinmauritzrm@gmail.com>"]
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "runtime"
path = "src/main.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

# Program deps
lazy_static = "1.4.0"
pest = "2.2.1"
pest_derive = "2.2.1"

strum = "0.24"
strum_macros = "0.24"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

strfmt = "^0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
