[package]
name = "autalon-transpiler"
description = "An Autalon transpiler. Currently only supports: Java"
repository = "https://github.com/RoganMatrivski/Autalon-Transpiler"
license = "MIT/Apache-2.0"
version = "0.2.0"
authors = ["Robin Mauritz <robinmauritzrm@gmail.com>"]
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "~0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "~0.1", optional = true }

# Program deps
pest = "~2.5"
pest_derive = "~2.5"

strum = "~0.24"
strum_macros = "~0.24"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

strfmt = "^0.2"

# This is 'all' for logging
tracing = "~0.1"
tracing-error = "~0.2"
tracing-subscriber = "~0.3"
tracing-wasm = "~0.2"
stable-eyre = "~0.2"
eyre = "~0.6"
color-eyre = "0.6.2"

[dev-dependencies]
wasm-bindgen-test = "~0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
